<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#009688"
    tools:context="com.example.mazen.streetgottalent.LoginActivity">


    <EditText
        android:id="@+id/mailInput"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="E-mail"
        android:layout_alignTop="@+id/userImage"
        android:layout_toEndOf="@+id/userImage" />

    <EditText
        android:id="@+id/passInput"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_below="@+id/mailInput"
        android:layout_toEndOf="@+id/lockImage" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:textColor="#fff"
        android:backgroundTint="#009688"
        android:text="@string/login"
        android:layout_below="@+id/passInput"
        android:layout_alignStart="@+id/lockImage"
        android:layout_alignEnd="@+id/passInput" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/or" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/gmailBtn"
        android:layout_alignStart="@+id/loginBtn"
        android:layout_alignTop="@+id/gmailBtn"
        app:srcCompat="@drawable/google" />

    <Button
        android:id="@+id/gmailBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/loginBtn"
        android:layout_below="@+id/textView"
        android:textColor="#fff"
        android:backgroundTint="#F34A38"
        android:layout_toEndOf="@+id/imageView6"
        android:text="@string/login_with_gmail" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/avatar"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/lockImage" />

    <ImageView
        android:id="@+id/lockImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        app:srcCompat="@drawable/locked"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/userImage"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/talent"
        android:layout_above="@+id/mailInput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_yet"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignStart="@+id/imageView7" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />



</RelativeLayout>
